// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`examples javascript beer 1`] = `
"春日宴。
與君 九 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 八 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 七 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 六 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 五 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 四 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 三 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 二 杯酒。可以窮歡宴。綠酒一杯歌一遍。
與君 一 杯酒。可以窮歡宴。綠酒一杯歌一遍。
綠酒千杯腸已爛。
"
`;

exports[`examples javascript collatz 1`] = `
"一十二。六。三。一十。五。一十六。八。四。二。一。一
一十九。五十八。二十九。八十八。四十四。二十二。一十一。三十四。一十七。五十二。二十六。一十三。四十。二十。一十。五。一十六。八。四。二。一。一
二十七。八十二。四十一。一百二十四。六十二。三十一。九十四。四十七。一百四十二。七十一。二百一十四。一百零七。三百二十二。一百六十一。四百八十四。二百四十二。一百二十一。三百六十四。一百八十二。九十一。二百七十四。一百三十七。四百一十二。二百零六。一百零三。三百一十。一百五十五。四百六十六。二百三十三。七百。三百五十。一百七十五。五百二十六。二百六十三。七百九十。三百九十五。一千一百八十六。五百九十三。一千七百八十。八百九十。四百四十五。一千三百三十六。六百六十八。三百三十四。一百六十七。五百零二。二百五十一。七百五十四。三百七十七。一千一百三十二。五百六十六。二百八十三。八百五十。四百二十五。一千二百七十六。六百三十八。三百一十九。九百五十八。四百七十九。一千四百三十八。七百一十九。二千一百五十八。一千零七十九。三千二百三十八。一千六百一十九。四千八百五十八。二千四百二十九。七千二百八十八。三千六百四十四。一千八百二十二。九百一十一。二千七百三十四。一千三百六十七。四千一百零二。二千零五十一。六千一百五十四。三千零七十七。九千二百三十二。四千六百一十六。二千三百零八。一千一百五十四。五百七十七。一千七百三十二。八百六十六。四百三十三。一千三百。六百五十。三百二十五。九百七十六。四百八十八。二百四十四。一百二十二。六十一。一百八十四。九十二。四十六。二十三。七十。三十五。一百零六。五十三。一百六十。八十。四十。二十。一十。五。一十六。八。四。二。一。一
"
`;

exports[`examples javascript collatz2 1`] = `
"二十
四十六
四十九
八
"
`;

exports[`examples javascript draw_heart 1`] = `
"一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一琉璃梳子撫青絲。一一一一一一一一一一一一一一一一一一一一畫心牽腸癡不癡。一一一一一一一一一
一一一一一一一琉璃梳子撫青絲。畫心牽腸癡不癡一一一一一一一一一一一一。琉璃梳子撫青絲。畫心牽腸癡不一一一一一一
一一一一一一癡。琉璃梳子撫青絲。畫心牽腸癡不癡。一一一一一一一一琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃一一一一一
一一一一一梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青一一一一一一絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心一一一一
一一一一牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。一一一一琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青一一一
一一一絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不一一癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青一一
一一一絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。一一
一一一畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心一一
一一一牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸一一
一一一癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不一一
一一一癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。一一
一一一一琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。一一一
一一一一琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。一一一
一一一一一琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不一一一一
一一一一一一癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心一一一一一
一一一一一一牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青一一一一一
一一一一一一一絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。一一一一一一
一一一一一一一一琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。一一一一一一一
一一一一一一一一一畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不一一一一一一一一
一一一一一一一一一一癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃一一一一一一一一一
一一一一一一一一一一一一梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃一一一一一一一一一一一
一一一一一一一一一一一一一梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。一一一一一一一一一一一一
一一一一一一一一一一一一一一琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一癡不癡。琉璃梳子撫青絲。畫心牽腸癡不癡。琉璃梳子一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一撫青絲。畫心牽腸癡不癡。琉璃梳子撫青絲。畫心一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一牽腸癡不癡。琉璃梳子撫青絲。畫心牽腸一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一癡不癡。琉璃梳子撫青絲。畫心牽腸一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一癡不癡。琉璃梳子撫青絲。一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一畫心牽腸癡不癡。琉璃一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一梳子撫青絲。一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一畫心牽腸一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一癡不一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一癡。一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一
一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一一

"
`;

exports[`examples javascript eightqueens 1`] = `
"一。五。八。六。三。七。二。四
一。六。八。三。七。四。二。五
一。七。四。六。八。二。五。三
一。七。五。八。二。四。六。三
二。四。六。八。三。一。七。五
二。五。七。一。三。八。六。四
二。五。七。四。一。八。六。三
二。六。一。七。四。八。三。五
二。六。八。三。一。四。七。五
二。七。三。六。八。五。一。四
二。七。五。八。一。四。六。三
二。八。六。一。三。五。七。四
三。一。七。五。八。二。四。六
三。五。二。八。一。七。四。六
三。五。二。八。六。四。七。一
三。五。七。一。四。二。八。六
三。五。八。四。一。七。二。六
三。六。二。五。八。一。七。四
三。六。二。七。一。四。八。五
三。六。二。七。五。一。八。四
三。六。四。一。八。五。七。二
三。六。四。二。八。五。七。一
三。六。八。一。四。七。五。二
三。六。八。一。五。七。二。四
三。六。八。二。四。一。七。五
三。七。二。八。五。一。四。六
三。七。二。八。六。四。一。五
三。八。四。七。一。六。二。五
四。一。五。八。二。七。三。六
四。一。五。八。六。三。七。二
四。二。五。八。六。一。三。七
四。二。七。三。六。八。一。五
四。二。七。三。六。八。五。一
四。二。七。五。一。八。六。三
四。二。八。五。七。一。三。六
四。二。八。六。一。三。五。七
四。六。一。五。二。八。三。七
四。六。八。二。七。一。三。五
四。六。八。三。一。七。五。二
四。七。一。八。五。二。六。三
四。七。三。八。二。五。一。六
四。七。五。二。六。一。三。八
四。七。五。三。一。六。八。二
四。八。一。三。六。二。七。五
四。八。一。五。七。二。六。三
四。八。五。三。一。七。二。六
五。一。四。六。八。二。七。三
五。一。八。四。二。七。三。六
五。一。八。六。三。七。二。四
五。二。四。六。八。三。一。七
五。二。四。七。三。八。六。一
五。二。六。一。七。四。八。三
五。二。八。一。四。七。三。六
五。三。一。六。八。二。四。七
五。三。一。七。二。八。六。四
五。三。八。四。七。一。六。二
五。七。一。三。八。六。四。二
五。七。一。四。二。八。六。三
五。七。二。四。八。一。三。六
五。七。二。六。三。一。四。八
五。七。二。六。三。一。八。四
五。七。四。一。三。八。六。二
五。八。四。一。三。六。二。七
五。八。四。一。七。二。六。三
六。一。五。二。八。三。七。四
六。二。七。一。三。五。八。四
六。二。七。一。四。八。五。三
六。三。一。七。五。八。二。四
六。三。一。八。四。二。七。五
六。三。一。八。五。二。四。七
六。三。五。七。一。四。二。八
六。三。五。八。一。四。二。七
六。三。七。二。四。八。一。五
六。三。七。二。八。五。一。四
六。三。七。四。一。八。二。五
六。四。一。五。八。二。七。三
六。四。二。八。五。七。一。三
六。四。七。一。三。五。二。八
六。四。七。一。八。二。五。三
六。八。二。四。一。七。五。三
七。一。三。八。六。四。二。五
七。二。四。一。八。五。三。六
七。二。六。三。一。四。八。五
七。三。一。六。八。五。二。四
七。三。八。二。五。一。六。四
七。四。二。五。八。一。三。六
七。四。二。八。六。一。三。五
七。五。三。一。六。八。二。四
八。二。四。一。七。五。三。六
八。二。五。三。一。七。四。六
八。三。一。六。二。五。七。四
八。四。一。三。六。二。七。五
"
`;

exports[`examples javascript euclidean 1`] = `
"二十一
一
陽
陰
一
四
一十二
八
一百二十八
"
`;

exports[`examples javascript factorial 1`] = `
"一百二十
"
`;

exports[`examples javascript fibonacci 1`] = `
"一百四十四
"
`;

exports[`examples javascript fibonacci2 1`] = `
"五十五
"
`;

exports[`examples javascript fizzbuzz 1`] = `
"一
二
黃河流水鳴濺濺。
四
燕山胡騎鳴啾啾。
黃河流水鳴濺濺。
七
八
黃河流水鳴濺濺。
燕山胡騎鳴啾啾。
一十一
黃河流水鳴濺濺。
一十三
一十四
黃河流水鳴濺濺。燕山胡騎鳴啾啾。
一十六
一十七
黃河流水鳴濺濺。
一十九
燕山胡騎鳴啾啾。
黃河流水鳴濺濺。
二十二
二十三
黃河流水鳴濺濺。
燕山胡騎鳴啾啾。
二十六
黃河流水鳴濺濺。
二十八
二十九
黃河流水鳴濺濺。燕山胡騎鳴啾啾。
三十一
三十二
黃河流水鳴濺濺。
三十四
燕山胡騎鳴啾啾。
黃河流水鳴濺濺。
三十七
三十八
黃河流水鳴濺濺。
燕山胡騎鳴啾啾。
四十一
黃河流水鳴濺濺。
四十三
四十四
黃河流水鳴濺濺。燕山胡騎鳴啾啾。
四十六
四十七
黃河流水鳴濺濺。
四十九
燕山胡騎鳴啾啾。
黃河流水鳴濺濺。
五十二
五十三
黃河流水鳴濺濺。
燕山胡騎鳴啾啾。
五十六
黃河流水鳴濺濺。
五十八
五十九
黃河流水鳴濺濺。燕山胡騎鳴啾啾。
六十一
六十二
黃河流水鳴濺濺。
六十四
燕山胡騎鳴啾啾。
黃河流水鳴濺濺。
六十七
六十八
黃河流水鳴濺濺。
燕山胡騎鳴啾啾。
七十一
黃河流水鳴濺濺。
七十三
七十四
黃河流水鳴濺濺。燕山胡騎鳴啾啾。
七十六
七十七
黃河流水鳴濺濺。
七十九
燕山胡騎鳴啾啾。
黃河流水鳴濺濺。
八十二
八十三
黃河流水鳴濺濺。
燕山胡騎鳴啾啾。
八十六
黃河流水鳴濺濺。
八十八
八十九
黃河流水鳴濺濺。燕山胡騎鳴啾啾。
九十一
九十二
黃河流水鳴濺濺。
九十四
燕山胡騎鳴啾啾。
黃河流水鳴濺濺。
九十七
九十八
黃河流水鳴濺濺。
燕山胡騎鳴啾啾。
"
`;

exports[`examples javascript hanoi 1`] = `
"〔 甲 〕 盤盤盤盤
〔 乙 〕 一一一一
〔 丙 〕 一一一一


〔 甲 〕 盤盤盤一
〔 乙 〕 一一一一
〔 丙 〕 盤一一一


〔 甲 〕 盤盤一一
〔 乙 〕 盤一一一
〔 丙 〕 盤一一一


〔 甲 〕 盤盤一一
〔 乙 〕 盤盤一一
〔 丙 〕 一一一一


〔 甲 〕 盤一一一
〔 乙 〕 盤盤一一
〔 丙 〕 盤一一一


〔 甲 〕 盤盤一一
〔 乙 〕 盤一一一
〔 丙 〕 盤一一一


〔 甲 〕 盤盤一一
〔 乙 〕 一一一一
〔 丙 〕 盤盤一一


〔 甲 〕 盤一一一
〔 乙 〕 一一一一
〔 丙 〕 盤盤盤一


〔 甲 〕 一一一一
〔 乙 〕 盤一一一
〔 丙 〕 盤盤盤一


〔 甲 〕 一一一一
〔 乙 〕 盤盤一一
〔 丙 〕 盤盤一一


〔 甲 〕 盤一一一
〔 乙 〕 盤盤一一
〔 丙 〕 盤一一一


〔 甲 〕 盤盤一一
〔 乙 〕 盤一一一
〔 丙 〕 盤一一一


〔 甲 〕 盤盤一一
〔 乙 〕 盤盤一一
〔 丙 〕 一一一一


〔 甲 〕 盤一一一
〔 乙 〕 盤盤一一
〔 丙 〕 盤一一一


〔 甲 〕 一一一一
〔 乙 〕 盤盤盤一
〔 丙 〕 盤一一一


〔 甲 〕 一一一一
〔 乙 〕 盤盤盤盤
〔 丙 〕 一一一一

畢
"
`;

exports[`examples javascript helloworld 1`] = `
"問天地好在。
"
`;

exports[`examples javascript helloworld+ 1`] = `
"問天地好在。
問天地好在。
問天地好在。
"
`;

exports[`examples javascript macro 1`] = `
"問天地好在
二。三。四。五。六。七
二。三。四。五。六。七
四。五。六
四。五。六
二十一
二十一
二十一
"
`;

exports[`examples javascript mandelbrot 1`] = `
"二二二二三三三三五五五五五五五五五五五五高高高高蔑蔑淼龜龜蠹蔑高高高五五五三三三三三三三三三三三三三三三三三三三二二二
二二二二三三三五五五五五五五五五五五高高高高高蔑蔑淼龍臺丁畫淼蔑高高高五五五五三三三三三三三三三三三三三三三三三二二二
二二二三三五五五五五五五五五五五五高高高高高蔑蔑淼龜丁丁丁丁龜蔑蔑蔑高高五五五五三三三三三三三三三三三三三三三三三二二
二二二三五五五五五五五五五五五高高高高高蔑淼淼淼龍龜丁丁丁丁龜龍淼蔑蔑蔑高五五五五三三三三三三三三三三三三三三三三二二
二二三五五五五五五五五五五五高高高高蔑蔑龍丁蠹龜丁丁丁丁丁丁丁蠹臺龍龍丁蔑高五五五五三三三三三三三三三三三三三三三三二
二二三五五五五五五五五五高高高蔑蔑蔑蔑淼畫丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁淼高五五五五五三三三三三三三三三三三三三三三二
二三五五五五五五五五高高蔑蔑蔑蔑蔑淼淼龍丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁龜淼蔑高五五五五三三三三三三三三三三三三三三三三
二三五五五五五高高高淼臺淼淼淼淼龍龍龍臺丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁臺畫蔑高五五五五五三三三三三三三三三三三三三三三
二五五五高高高高蔑蔑淼丁蠹龜丁臺龜畫龜丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁蔑高五五五五五三三三三三三三三三三三三三三三
二五高高高高高蔑蔑淼龍龜丁丁丁丁丁丁龘丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁蔑高高五五五五三三三三三三三三三三三三三三三
二高高高高蔑蔑蔑淼畫龜丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁龍蔑高高五五五五五三三三三三三三三三三三三三三
二高高高淼淼淼龍畫丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁龘淼蔑高高五五五五五三三三三三三三三三三三三三三
丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁龘龍淼蔑高高五五五五五三三三三三三三三三三三三三三
二高高高淼淼淼龍畫丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁龘淼蔑高高五五五五五三三三三三三三三三三三三三三
二高高高高蔑蔑蔑淼畫龜丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁龍蔑高高五五五五五三三三三三三三三三三三三三三
二五高高高高高蔑蔑淼龍龜丁丁丁丁丁丁龘丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁蔑高高五五五五三三三三三三三三三三三三三三三
二五五五高高高高蔑蔑淼丁蠹龜丁臺龜畫龜丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁蔑高五五五五五三三三三三三三三三三三三三三三
二三五五五五五高高高淼臺淼淼淼淼龍龍龍臺丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁臺畫蔑高五五五五五三三三三三三三三三三三三三三三
二三五五五五五五五五高高蔑蔑蔑蔑蔑淼淼龍丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁龜淼蔑高五五五五三三三三三三三三三三三三三三三三
二二三五五五五五五五五五高高高蔑蔑蔑蔑淼畫丁丁丁丁丁丁丁丁丁丁丁丁丁丁丁淼高五五五五五三三三三三三三三三三三三三三三二
二二三五五五五五五五五五五五高高高高蔑蔑龍丁蠹龜丁丁丁丁丁丁丁蠹臺龍龍丁蔑高五五五五三三三三三三三三三三三三三三三三二
二二二三五五五五五五五五五五五高高高高高蔑淼淼淼龍龜丁丁丁丁龜龍淼蔑蔑蔑高五五五五三三三三三三三三三三三三三三三三二二
二二二三三五五五五五五五五五五五五高高高高高蔑蔑淼龜丁丁丁丁龜蔑蔑蔑高高五五五五三三三三三三三三三三三三三三三三三二二
二二二二三三三五五五五五五五五五五五高高高高高蔑蔑淼龍臺丁畫淼蔑高高高五五五五三三三三三三三三三三三三三三三三三二二二
"
`;

exports[`examples javascript mergesort 1`] = `
"一。二。三。一十四。一十八
"
`;

exports[`examples javascript misc 1`] = `
"問天地好在。
甲之數 三十 也
一
二
三
四
五
六
七
八
九
一十
一十一
一十二
一十三
一十四
一十五
一十六
一十七
一十八
一十九
二十
二十一
二十二
二十三
二十四
二十五
二十六
二十七
二十八
二十九
三。五。八。二十。三十五。七百
"
`;

exports[`examples javascript modinv 1`] = `
"一
"
`;

exports[`examples javascript multiplication_table 1`] = `
"一 一 得 一
一 二 得 二
二 二 得 四
一 三 得 三
二 三 得 六
三 三 得 九
一 四 得 四
二 四 得 八
三 四 一十二
四 四 一十六
一 五 得 五
二 五 一十
三 五 一十五
四 五 二十
五 五 二十五
一 六 得 六
二 六 一十二
三 六 一十八
四 六 二十四
五 六 三十
六 六 三十六
一 七 得 七
二 七 一十四
三 七 二十一
四 七 二十八
五 七 三十五
六 七 四十二
七 七 四十九
一 八 得 八
二 八 一十六
三 八 二十四
四 八 三十二
五 八 四十
六 八 四十八
七 八 五十六
八 八 六十四
一 九 得 九
二 九 一十八
三 九 二十七
四 九 三十六
五 九 四十五
六 九 五十四
七 九 六十三
八 九 七十二
九 九 八十一
"
`;

exports[`examples javascript nested_fun 1`] = `""`;

exports[`examples javascript obj 1`] = `
"{\\"丙\\":\\"某甲\\",\\"丁\\":5}
{\\"丙\\":\\"某甲\\"}
"
`;

exports[`examples javascript pascal_triangle 1`] = `
"一
一。一
一。二。一
一。三。三。一
一。四。六。四。一
一。五。一十。一十。五。一
一。六。一十五。二十。一十五。六。一
一。七。二十一。三十五。三十五。二十一。七。一
一。八。二十八。五十六。七十。五十六。二十八。八。一
"
`;

exports[`examples javascript pi_leibniz 1`] = `
"三又二分三釐二毫三絲一忽五微八纖零九塵四埃零六漠
三又一分二釐七毫三絲零七微六纖六沙七塵九埃八渺一漠
三又一分四釐三毫九絲六忽七微九纖四沙七塵一埃五渺二漠
三又一分四釐零八絲四忽五微二纖六沙九塵五埃三渺九漠
三又一分四釐一毫六絲零一微三纖八沙六塵零七渺
"
`;

exports[`examples javascript pi_liuhui 1`] = `
"割圓 三千零七十二 觚。所得圓率者。
三又一分四釐一毫五絲九忽二微一纖零五塵九埃九渺九漠 也。
"
`;

exports[`examples javascript quicksort 1`] = `
"三。五。八。二十。三十五。七百
"
`;

exports[`examples javascript quicksort_inplace 1`] = `
"陽 一。二。三。四。五
"
`;

exports[`examples javascript quine 1`] = `
"吾有一術。名之曰「自己複製」。欲行是術。是術曰。吾有一術。名之曰「置換」。欲行是術。必先得三數。曰「文字列」。曰「置換対象」。曰「置換先」是術曰。吾有一言。曰「「」」。名之曰「返品」。吾有一數。曰二。名之曰「未来」。吾有一爻。曰陽。名之曰「実行条件」。凡「文字列」中之「文字」。若「実行条件」者。若「文字」等於「「星」」中無陰乎「文字列」之「未来」等於「置換対象」者。昔之「文字」者。今「置換先」是。昔之「実行条件」者。今陰是。也。加「返品」以「文字」。昔之「返品」者。今其是矣。若非。昔之「実行条件」者。今陽是。也。加「未来」以一。昔之「未来」者。今其是矣。云云。乃得「返品」。是謂「置換」之術也。吾有一言。曰String.fromCharCode名之曰「函数」。施「函数」於一萬二千三百。昔之「始」者。今其是矣。施「函数」於一萬二千三百零一。昔之「終」者。今其是矣。吾有二言。曰「「吾有一術。名之曰星甲自己複製星乙。欲行是術。是術曰。吾有一術。名之曰星甲置換星乙。欲行是術。必先得三數。曰星甲文字列星乙。曰星甲置換対象星乙。曰星甲置換先星乙是術曰。吾有一言。曰星甲星甲星乙星乙。名之曰星甲返品星乙。吾有一數。曰二。名之曰星甲未来星乙。吾有一爻。曰陽。名之曰星甲実行条件星乙。凡星甲文字列星乙中之星甲文字星乙。若星甲実行条件星乙者。若星甲文字星乙等於星甲星甲星星乙星乙中無陰乎星甲文字列星乙之星甲未来星乙等於星甲置換対象星乙者。昔之星甲文字星乙者。今星甲置換先星乙是。昔之星甲実行条件星乙者。今陰是。也。加星甲返品星乙以星甲文字星乙。昔之星甲返品星乙者。今其是矣。若非。昔之星甲実行条件星乙者。今陽是。也。加星甲未来星乙以一。昔之星甲未来星乙者。今其是矣。云云。乃得星甲返品星乙。是謂星甲置換星乙之術也。吾有一言。曰String.fromCharCode名之曰星甲函数星乙。施星甲函数星乙於一萬二千三百。昔之星甲始星乙者。今其是矣。施星甲函数星乙於一萬二千三百零一。昔之星甲終星乙者。今其是矣。吾有二言。曰星甲星甲星丙星乙星乙。曰星甲星甲星乙星乙。名之曰星甲原文星乙曰星甲結果星乙。施星甲置換星乙於星甲原文星乙。於星甲星甲甲星乙星乙。於星甲始星乙。昔之星甲結果星乙者。今其是矣。施星甲置換星乙於星甲結果星乙。於星甲星甲乙星乙星乙。於星甲終星乙。昔之星甲結果星乙者。今其是矣。施星甲置換星乙於星甲結果星乙。於星甲星甲丙星乙星乙。於星甲原文星乙。昔之星甲結果星乙者。今其是矣。吾有一言。曰星甲結果星乙。書之。是謂星甲自己複製星乙之術也。施星甲自己複製星乙。」」。曰「「」」。名之曰「原文」曰「結果」。施「置換」於「原文」。於「「甲」」。於「始」。昔之「結果」者。今其是矣。施「置換」於「結果」。於「「乙」」。於「終」。昔之「結果」者。今其是矣。施「置換」於「結果」。於「「丙」」。於「原文」。昔之「結果」者。今其是矣。吾有一言。曰「結果」。書之。是謂「自己複製」之術也。施「自己複製」。
"
`;

exports[`examples javascript quine2 1`] = `
"吾有一術。名之曰星甲自己複製星乙。星丁欲行是術。是術曰。星丁星丁吾有一術。名之曰星甲置換星乙。星丁欲行是術。必先得三數。星丁曰星甲文字列星乙。曰星甲置換対象星乙。曰星甲置換先星乙是術曰。星丁星丙吾有一言。曰星甲星甲星乙星乙。名之曰星甲返品星乙。星丁星丙吾有一數。曰二。名之曰星甲未来星乙。星丁星丙吾有一數。曰陽。名之曰星甲実行条件星乙。星丁星丙凡星甲文字列星乙中之星甲文字星乙。星丁星丙星丙星丙若星甲実行条件星乙者。星丁星丙星丙星丙星丙若星甲文字星乙等於星甲星甲星星乙星乙星乙中無陰乎星甲文字列星乙之未来等於星甲置換対象星乙者。星丁星丙星丙星丙星丙星丙加星甲返品星乙以星甲置換先星乙。昔之星甲返品星乙者。今其是矣。星丁星丙星丙星丙星丙星丙昔之星甲実行条件星乙者。今陰是。星丁星丙星丙星丙星丙若非。星丁星丙星丙星丙星丙星丙加星甲返品星乙以星甲文字星乙。昔之星甲返品星乙者。今其是矣。星丁星丙星丙星丙星丙也。星丁星丙星丙星丙若非。星丁星丙星丙星丙星丙昔之星甲実行条件星乙者。今陽是。星丁星丙星丙星丙也。星丁星丙星丙加星甲未来星乙以一。昔之星甲未来星乙者。今其是矣。星丁星丙云云。星丁星丙乃得星甲返品星乙。星丁是謂星甲置換星乙之術也。星丁星丁吾有一言。曰String.fromCharCode名之曰星甲函数星乙。星丁施星甲函数星乙於一萬二千三百。昔之星甲始括弧星乙者。今其是矣。星丁施星甲函数星乙於一萬二千三百零一。昔之星甲終括弧星乙者。今其是矣。星丁施星甲函数星乙於三十二。昔之星甲空白星乙者。今其是矣。星丁加星甲空白星乙以星甲空白星乙。昔之星甲空白星乙者。今其是矣。星丁施星甲函数星乙於十。昔之星甲改行星乙者。今其是矣。星丁吾有一言。曰星甲星甲星戊星乙星乙。名之曰星甲原文星乙。星丁吾有一言。曰星甲星甲星乙星乙。名之曰星甲結果星乙。星丁施星甲置換星乙於星甲原文星乙。於星甲星甲甲星乙星乙。於星甲始括弧星乙。昔之星甲結果星乙者。今其是矣。星丁施星甲置換星乙於星甲結果星乙。於星甲星甲乙星乙星乙。於星甲終括弧星乙。昔之星甲結果星乙者。今其是矣。星丁施星甲置換星乙於星甲結果星乙。於星甲星甲丙星乙星乙。於星甲空白星乙。昔之星甲結果星乙者。今其是矣。星丁施星甲置換星乙於星甲結果星乙。於星甲星甲丁星乙星乙。於星甲改行星乙。昔之星甲結果星乙者。今其是矣。星丁施星甲置換星乙於星甲結果星乙。於星甲星甲戊星乙星乙。於星甲原文星乙。昔之星甲結果星乙者。今其是矣。星丁吾有一言。曰星甲結果星乙。書之。星丁星丁是謂星甲自己複製星乙之術也。星丁施星甲自己複製星乙。
"
`;

exports[`examples javascript selectionsort 1`] = `
"五。八。九。一十。五十五。三百。一千
"
`;

exports[`examples javascript sieve 1`] = `
"二。三。五。七。一十一。一十三。一十七。一十九。二十三。二十九。三十一。三十七。四十一。四十三。四十七。五十三。五十九。六十一。六十七。七十一。七十三。七十九。八十三。八十九。九十七
"
`;

exports[`examples javascript sqrt_newton 1`] = `
"一又四分一釐六毫六絲六忽六微六纖六沙六塵六埃六渺七漠
一又四分一釐四毫二絲一忽五微六纖八沙六塵二埃七渺五漠
一又四分一釐四毫二絲一忽三微五纖六沙二塵三埃七渺三漠
一又四分一釐四毫二絲一忽三微五纖六沙二塵三埃七渺三漠
一又四分一釐四毫二絲一忽三微五纖六沙二塵三埃七渺三漠
一又四分一釐四毫二絲一忽三微五纖六沙二塵三埃七渺三漠
一又四分一釐四毫二絲一忽三微五纖六沙二塵三埃七渺三漠
"
`;

exports[`examples javascript try 1`] = `
"嗚呼哀哉。伏维尚飨
事不關心
"
`;

exports[`examples javascript turing 1`] = `
"營營河狸。止于樊。
甲 《 〔白〕 》
乙 《 、墨、〔白〕 》
甲 《 〔墨〕、墨、 》
丙 《 〔白〕、墨、、墨、 》
乙 《 〔白〕、墨、、墨、、墨、 》
甲 《 〔白〕、墨、、墨、、墨、、墨、 》
乙 《 、墨、〔墨〕、墨、、墨、、墨、 》
乙 《 、墨、、墨、〔墨〕、墨、、墨、 》
乙 《 、墨、、墨、、墨、〔墨〕、墨、 》
乙 《 、墨、、墨、、墨、、墨、〔墨〕 》
乙 《 、墨、、墨、、墨、、墨、、墨、〔白〕 》
甲 《 、墨、、墨、、墨、、墨、〔墨〕、墨、 》
丙 《 、墨、、墨、、墨、〔墨〕、墨、、墨、 》
樊 《 、墨、、墨、、墨、〔墨〕、墨、、墨、 》
"
`;

exports[`examples javascript zh_sqrt 1`] = `
"二百六十八
"
`;
